	  lib/shell/command-processor.rb, lib/shell/process-controller.rb,
	  lib/shell/system-command.rb, lib/uri/common.rb: remove unused block
	  arguments to avoid creating Proc objects.

Sat Nov  5 15:45:04 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/init.c (rsock_socket0): extract single socket() call with
	  CLOEXEC handling from rsock_socket.

Sat Nov  5 11:18:12 2011  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (rsock_socketpair0): don't clear
	  try_sock_cloexec if SOCK_CLOEXEC is not a reason for EINVAL.

Fri Nov  4 14:08:19 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/ossl_pkey_rsa.c (rsa_generate): [SECURITY] Set RSA
	  exponent value correctly.  Awful bug.  This bug caused exponent of
	  generated key to be always '1'.  By default, and regardless of e
	  given as a parameter.

	  !!! Keys generated by this code (trunk after 2011-09-01) must be
	  re-generated !!! (ruby_1_9_3 is safe)

	* test/openssl/test_pkey_rsa.rb: Add tests for default exponent and
	  specifying exponent by a parameter.

Fri Nov 04 01:31:25 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* test/openssl/test_engine.rb: add first tests for builtin "openssl"
	  engine.

Fri Nov 04 08:41:26 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/extconf.rb:
	* ext/openssl/ossl_engine.c: add some missing OpenSSL engines.
	  Thanks, Yui Naruse, for providing the patch!
	  [Bug #5548] [ruby-core:40670]

Fri Nov  4 04:54:10 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/configure.bat: disable delayed expansion of enironment variable.
	  [Bug #5517] [ruby-core:40531]

Fri Nov  4 03:45:22 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (make_writeconv): fixed typo of previous commit.

Fri Nov  4 01:56:30 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (make_writeconv): unversal_newline converter is for reading.
	  so, if the io is text mode and has ECONV_UNIVERSAL_NEWLINE_DECORATOR
	  flag, use crlf_newline converter for writing.