@@ -46,6 +46,10 @@ with all sufficient information, see the ChangeLog file.
     * Net::IMAP.default_ssl_port
     * Net::IMAP.default_imaps_port
 
+* pathname
+  * extended method:
+    * Pathname#find returns an enumerator if no block is given.
+
 * resolv
   * new methods:
     * Resolv::DNS#timeouts=
